--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "gulp": "^3.9.1",
     "gulp.spritesmith": "^6.2.1",
     "imagemin-svgo": "^5.2.0",
